# bedrock-python

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: manual-publish.yml  python.yml  rust.yml
bedrock_python/: __init__.py
bedrock_python/kats/: __init__.py  __main__.py  cli.py  parser.py  runner.py
src/: falcon.rs  hhd.rs  lib.rs  ml_dsa.rs
test_vectors/ML-DSA-keyGen-FIPS204/: expectedResults.json  internalProjection.json  prompt.json  registration.json  validation.json
tests/: __init__.py  conftest.py  test_falcon.py  test_hhd.py  test_ml_dsa.py
