[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bedrock-python"
version = "0.1.0"
description = "Python bindings for the Bedrock cryptographic library"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "maturin>=1.0"]

[project.scripts]
bedrock-kats = "bedrock_python.kats.cli:main"

[tool.maturin]
module-name = "bedrock_python"
features = ["pyo3/extension-module"]
